update resume and add twitter

--- a/index.html
+++ b/index.html
@@ -1,147 +1,200 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Joseph Zhang Design</title>
+    <meta name="author" content="Joseph Zhang" />
+    <meta
+      name="description"
+      content="Joseph is a designer interested in all things related to systems,
+      products, and multimodal interaction."
+    />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Joseph Zhang Design</title>
-  <meta name="author" content="Joseph Zhang" />
-  <meta name="description" content="Joseph is a designer interested in all things related to systems,
-      products, and multimodal interaction." />
+    <meta
+      name="keywords"
+      content="joseph, zhang, josephz, josephz.me, portfolio, design, carnegie mellon, design, design, ux design, apple, graphic design, interaction design, multimodal, brain technologies, natural ai"
+    />
+    <meta name="robots" content="index, follow" />
+    <link rel="icon" href="cursor.png" />
+    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/srk5tly.css" />
+  </head>
 
-  <meta name="keywords"
-    content="joseph, zhang, josephz, josephz.me, portfolio, design, carnegie mellon, design, design, ux design, apple, graphic design, interaction design, multimodal, brain technologies, natural ai" />
-  <meta name="robots" content="index, follow" />
-  <link rel="icon" href="cursor.png" />
-  <link rel="stylesheet" href="main.css" />
-  <link rel="stylesheet" href="https://use.typekit.net/srk5tly.css" />
-</head>
+  <body class="index">
+    <main class="landing">
+      <article>
+        <section class="about">
+          <b style="margin-bottom: 5px; display: inline-block">Joseph Zhang</b>
+          <div>
+            <p>
+              I'm a designer interested in all things related to digital
+              toolmaking, multimodal interaction, and systems thinking. I
+              believe good design reflects artistic values focused around
+              emotion and play. I'm a fourth year undergrad at Carnegie Mellon
+              studying
+              <a
+                class="cmu-design"
+                target="blank"
+                href="https://design.cmu.edu/programs/undergrad"
+                >Communication Design</a
+              >
+              and
+              <a class="hci" target="blank" href="https://www.hcii.cmu.edu"
+                >Human-Computer Interaction</a
+              >. <br /><br />
+            </p>
+            <p>
+              Previously, I worked at
+              <a target="_blank" href="https://www.apple.com">Apple</a>,
+              <a target="_blank" href="https://www.natural.ai"
+                >Brain Technologies</a
+              >, and
+              <a target="_blank" href="https://www.elevationchurch.org"
+                >Elevation Church</a
+              >. Currently, I'm designing editor experiences at
+              <a target="_blank" href="https://www.skiff.org">Skiff</a> and chat
+              features for
+              <a target="_blank" href="https://twitter.com/metalinklabs"
+                >Metalink</a
+              >. If you have an interesting idea, let's get in touch.
+            </p>
+          </div>
+        </section>
 
-<body class="index">
-  <main class="landing">
-    <article>
-      <section class="about">
-        <b style=" margin-bottom: 5px; display: inline-block">Joseph Zhang</b>
-        <div>
-          <p>
-            I'm a designer interested in all things related to digital toolmaking, multimodal interaction, and systems thinking. I believe good design reflects artistic values focused around emotion and play. I'm a fourth year undergrad at Carnegie Mellon studying
-            <a class="cmu-design" target="blank" href="https://design.cmu.edu/programs/undergrad">Communication
-              Design</a>
-            and
-            <a class="hci" target="blank" href="https://www.hcii.cmu.edu">Human-Computer Interaction</a>.
-            <br /><br />
-          </p>
-          <p>
-            Previously, I worked at
-            <a target="_blank" href="https://www.apple.com">Apple</a>,
-            <a target="_blank" href="https://www.natural.ai">Brain Technologies</a>, and
-            <a target="_blank" href="https://www.elevationchurch.org">Elevation Church</a>. 
-            Currently, I'm designing editor experiences at <a target="_blank"
-            href="https://www.skiff.org">Skiff</a> and chat features for <a target="_blank"
-            href="https://twitter.com/metalinklabs">Metalink</a>. If you have an interesting
-            idea, let's get in touch.
-          </p>
-        </div>
-      </section>
+        <footer>
+          <div class="contact">
+            <a class="indent" target="_blank" href="josephzhang-resume.pdf"
+              >Resume</a
+            >
+            <a
+              class="indent"
+              target="_blank"
+              href="https://www.linkedin.com/in/josephzme/"
+              >LinkedIn</a
+            >
+            <a class="indent" target="_blank" href="https://twitter.com/__joz"
+              >Twitter</a
+            >
+          </div>
+        </footer>
+      </article>
 
-      <footer>
+      <article class="media">
+        <figure>
+          <a
+            target="_blank"
+            href="https://josephz.notion.site/Apple-91d54c71155d444c9a1abf2a0e8d5f43"
+            class="hoverCard"
+          >
+            <img alt="Image of Projec: Natural AI" src="public/apple.jpg" />
 
-        <div class="contact">
-          <a class="indent" target="_blank" href="mailto:josephzhang@cmu.edu">Email</a>
-          <a class="indent" target="_blank" href="josephzhang-resume.pdf">Resume</a>
-          <a class="indent" target="_blank" href="https://www.linkedin.com/in/josephzme/">LinkedIn</a>
-        </div>
-      </footer>
-    </article>
+            <small>
+              <b>Apple</b> / Designed platform-level Siri interactions
+            </small>
+          </a>
+        </figure>
+        <figure>
+          <a
+            target="_blank"
+            href="https://josephz.notion.site/Natural-AI-9bf5bc35f91545e3bcce20bc9450db05"
+            class="hoverCard"
+          >
+            <img alt="Image of Projec: Natural AI" src="public/natural-2.jpg" />
 
-    <article class="media">
+            <small>
+              <b>Brain Technologies</b> / Shipped numerous features around
+              notifications, NLP search, and various domain-related work.
+            </small>
+          </a>
+        </figure>
+        <figure>
+          <a
+            target="_blank"
+            href="https://josephz.notion.site/AIGA-Hue-38cd5f40c38c464ab1c5885468a1a3de"
+            class="hoverCard"
+          >
+            <img alt="Image of Project 1: AIGA & Hue" src="public/aiga.jpg" />
 
-      <figure>
-        <a target="_blank" href="https://josephz.notion.site/Apple-91d54c71155d444c9a1abf2a0e8d5f43"
-          class="hoverCard">
-          <img alt="Image of Projec: Natural AI" src="public/apple.jpg" />
+            <small
+              ><b>AIGA & Hue</b> / Interactive data visualization of +9400
+              designers from AIGA's design census</small
+            >
+          </a>
+        </figure>
+        <figure>
+          <a
+            target="_blank"
+            href="https://josephz.notion.site/Elevation-Connect-ac95e52bf2794c74b95f29810c11a089"
+            class="hoverCard"
+          >
+            <img
+              alt="Image of Project 2: Elevation Connect"
+              src="public/elevation-connect.jpg"
+            />
+            <small
+              ><b>Elevation Connect</b> / Web app designed to help people join
+              communities in the church</small
+            >
+          </a>
+        </figure>
+        <figure>
+          <a
+            target="_blank"
+            href="https://josephz.notion.site/Pixel-Push-48910c3a971747b0b6fc3f31572b9984"
+            class="hoverCard"
+          >
+            <video playsinline autoplay loop muted>
+              <source src="public/pixel-push.mp4" type="video/mp4" />
+              Your browser does not support HTML video.
+            </video>
+            <small>
+              <b>Pixel Push</b> / Collaborative painting experience exploring
+              webcam image-capture and sound recognition
+            </small>
+          </a>
+        </figure>
+        <figure>
+          <a
+            target="_blank"
+            href="https://josephz.notion.site/Reading-Trends-2c9be594b74c44e885724dc7a910e42e"
+            class="hoverCard"
+          >
+            <video playsinline autoplay loop muted>
+              <source src="public/reading-trends.mp4" type="video/mp4" />
+              Your browser does not support HTML video.
+            </video>
+            <small>
+              <b>Reading Trends</b> / Data visualization drawing relationships
+              between Google Trends and NYT Best Selling books in 2019
+            </small>
+          </a>
+        </figure>
 
-          <small>
-            <b>Apple</b> / Designed platform-level Siri interactions
-          </small>
-        </a>
-      </figure>
-      <figure>
-        <a target="_blank" href="https://josephz.notion.site/Natural-AI-9bf5bc35f91545e3bcce20bc9450db05"
-          class="hoverCard">
-          <img alt="Image of Projec: Natural AI" src="public/natural-2.jpg" />
-
-          <small>
-            <b>Brain Technologies</b> / Shipped numerous features around notifications, NLP search, and various domain-related work.
-          </small>
-        </a>
-      </figure>
-      <figure>
-        <a target="_blank" href="https://josephz.notion.site/AIGA-Hue-38cd5f40c38c464ab1c5885468a1a3de"
-          class="hoverCard">
-          <img alt="Image of Project 1: AIGA & Hue" src="public/aiga.jpg" />
-
-          <small><b>AIGA & Hue</b> / Interactive data visualization of +9400
-            designers from AIGA's design census</small>
-        </a>
-      </figure>
-      <figure>
-        <a target="_blank" href="https://josephz.notion.site/Elevation-Connect-ac95e52bf2794c74b95f29810c11a089"
-          class="hoverCard">
-          <img alt="Image of Project 2: Elevation Connect" src="public/elevation-connect.jpg" />
-          <small><b>Elevation Connect</b> / Web app designed to help people join
-            communities in the church</small>
-        </a>
-      </figure>
-      <figure>
-        <a target="_blank" href="https://josephz.notion.site/Pixel-Push-48910c3a971747b0b6fc3f31572b9984"
-          class="hoverCard">
-          <video playsinline autoplay loop muted>
-            <source src="public/pixel-push.mp4" type="video/mp4" />
-            Your browser does not support HTML video.
-          </video>
-          <small>
-            <b>Pixel Push</b> / Collaborative painting experience exploring
-            webcam image-capture and sound recognition
-          </small>
-        </a>
-      </figure>
-      <figure>
-        <a target="_blank" href="https://josephz.notion.site/Reading-Trends-2c9be594b74c44e885724dc7a910e42e"
-          class="hoverCard">
-          <video playsinline autoplay loop muted>
-            <source src="public/reading-trends.mp4" type="video/mp4" />
-            Your browser does not support HTML video.
-          </video>
-          <small>
-            <b>Reading Trends</b> / Data visualization drawing relationships
-            between Google Trends and NYT Best Selling books in 2019
-          </small>
-        </a>
-      </figure>
-
-      <figure>
-        <a target="_blank" href="https://josephz.notion.site/Thinkspace-24f3dc1c62904b0da412b0a4230cc92d"
-          class="hoverCard">
-          <video playsinline autoplay loop muted>
-            <source src="public/thinkspace.mp4" type="video/mp4" />
-            Your browser does not support HTML video.
-          </video>
-          <small>
-            <b>Thinkspace</b> / A speculative exploration of conversational
-            agents in discussion-based contexts
-          </small>
-        </a>
-      </figure>
-    </article>
-  </main>
-</body>
-<!-- <script
+        <figure>
+          <a
+            target="_blank"
+            href="https://josephz.notion.site/Thinkspace-24f3dc1c62904b0da412b0a4230cc92d"
+            class="hoverCard"
+          >
+            <video playsinline autoplay loop muted>
+              <source src="public/thinkspace.mp4" type="video/mp4" />
+              Your browser does not support HTML video.
+            </video>
+            <small>
+              <b>Thinkspace</b> / A speculative exploration of conversational
+              agents in discussion-based contexts
+            </small>
+          </a>
+        </figure>
+      </article>
+    </main>
+  </body>
+  <!-- <script
     src="https://code.jquery.com/jquery-3.5.1.js"
     integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
     crossorigin="anonymous"
   ></script> -->
-<!-- <script src="script/imageHover.js"></script> -->
-
+  <!-- <script src="script/imageHover.js"></script> -->
 </html>
