fix browser width issue

--- a/index.html
+++ b/index.html
@@ -48,17 +48,16 @@
             <p>
               Previously, I worked at
               <a target="_blank" href="https://www.apple.com">Apple</a>,
+              <a target="_blank" href="https://twitter.com/metalinklabs"
+                >Metalink</a
+              >,
               <a target="_blank" href="https://www.natural.ai"
                 >Brain Technologies</a
               >, and
               <a target="_blank" href="https://www.elevationchurch.org"
                 >Elevation Church</a
-              >. Currently, I'm designing editor experiences at
-              <a target="_blank" href="https://www.skiff.org">Skiff</a> and chat
-              features for
-              <a target="_blank" href="https://twitter.com/metalinklabs"
-                >Metalink</a
-              >. If you have an interesting idea, let's get in touch.
+              >. I'll be joining
+              <a target="_blank" href="https://www.skiff.org">Skiff</a> full-time in the fall to work on privacy-first collaboration tools. If you have an interesting idea, let's get in touch.
             </p>
           </div>
         </section>
