update resume + add reset file

--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
               <a target="_blank" href="https://www.elevationchurch.org"
                 >Elevation Church</a
               >. I'll be joining
-              <a target="_blank" href="https://www.skiff.org">Skiff</a> full-time in the fall to work on privacy-first collaboration tools. If you have an interesting idea, let's get in touch.
+              <a target="_blank" href="https://www.skiff.org">Skiff</a>
+              full-time in the fal to work on privacy-first collaboration tools.
+              If you have an interesting idea, let's get in touch.
             </p>
           </div>
         </section>
