--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
               >, and
               <a target="_blank" href="https://www.elevationchurch.org"
                 >Elevation Church</a
-              >. I'll be joining
+              >. After graduation, I'll be joining
               <a target="_blank" href="https://www.skiff.org">Skiff</a>
-              full-time in the fal to work on privacy-first collaboration tools.
-              If you have an interesting idea, let's get in touch.
+              to work on privacy-first collaboration tools. If you have an
+              interesting idea, let's get in touch.
             </p>
           </div>
         </section>
