update copy and styling

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               >. <br /><br />
             </p>
             <p>
-              Previously, I worked at
+              In the past, I worked at
               <a target="_blank" href="https://www.apple.com">Apple</a>,
               <a target="_blank" href="https://twitter.com/metalinklabs"
                 >Metalink</a
@@ -56,10 +56,11 @@
               >, and
               <a target="_blank" href="https://www.elevationchurch.org"
                 >Elevation Church</a
-              >. After graduation, I'll be joining
-              <a target="_blank" href="https://www.skiff.org">Skiff</a>
-              to work on privacy-first collaboration tools. If you have an
-              interesting idea, let's get in touch.
+              >. I’m currently a front-end developer at the Computational
+              Creativity Lab. After graduation, I'll be building privacy-first
+              collaboration tools at
+              <a target="_blank" href="https://www.skiff.org">Skiff</a>. If you
+              have an interesting idea, let's get in touch.
             </p>
           </div>
         </section>
